crates/toml/tests/snapshots/invalid/inline-table/bad-key-syntax.stderr
TOML parse error at line 1, column 16
  |
1 | tbl = { a = 1, [b] }
  |                ^
missing key for inline table element, expected key
